fix uneven grid separator lines (hack)

--- a/src/index.css
+++ b/src/index.css
@@ -41,8 +41,8 @@ body {
     background-color: lightgray;
     margin-top: 20px;
     margin-bottom: 20px;
-    
-    gap: 1px;
+
+    gap: calc(1px / var(--device-pixel-ratio));
 }
 
 #calendar-table > div {
